// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionResultPageComponent should snap when session results failed to load 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed={[Function Boolean]}
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading="false"
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load results
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with an open feedback session with no questions 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with default fields 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with feedback session with questions 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with feedback session with questions of anonymous responses 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with session results are loading 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with user that is logged in and using session link 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser={[Function String]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName={[Function String]}
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        <div>
           You are viewing feedback results as alice. If you wish to link your Google account (alice) with this user, 
          <a
            href="#"
            id="join-course-btn"
          >
            click here
          </a>
          . 
        </div>
        
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent should snap with user that is not logged in and using session link 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  courseId={[Function String]}
  entityType={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  logService={[Function LogService]}
  loggedInUser=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName={[Function String]}
  questions={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  session={[Function Object]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
     Feedback Session Results
  
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are viewing feedback results as alice. You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-result-page>
`;
